add static cache, url reverse, formless

--- a/shop/templates/shop/item_list.html
+++ b/shop/templates/shop/item_list.html
@@ -9,7 +9,7 @@
     <ul>
         {% for item in item_list %}
             <li>
-                <a href="/shop/{{ item.pk }}">
+                <a href="{{ item.get_absolute_url }}">
                     <h3>{{ item.name }}</h3>
                 </a>
                 <h4>가격 : {{ item.price }}</h4>
@@ -19,4 +19,7 @@
             </li>
         {% endfor %}
     </ul>
+
+    <hr/>
+    <a href="{% url "shop:item_new" %}">New Item</a>
 {% endblock %}
