--- a/shop/templates/shop/item_list.html
+++ b/shop/templates/shop/item_list.html
@@ -1,25 +1,27 @@
 {% extends "shop/layout.html" %}
 
 {% block content %}
-    <form action="" method="GET">
-        <input type="text" name="q" value="{{ q }}" />
-        <input type="submit" value="search" />
-    </form>
+    <div class="mb-3">
+        <form action="" method="GET">
+            <input type="text" name="q" value="{{ q }}" class="form-control" placeholder="검색어를 입력해주세요" />
+        </form>
+    </div>
 
-    <ul>
-        {% for item in item_list %}
-            <li>
-                <a href="{{ item.get_absolute_url }}">
-                    <h3>{{ item.name }}</h3>
-                </a>
-                <h4>가격 : {{ item.price }}</h4>
-                {% if item.desc %}
-                    <p>{{ item.desc }}</p>
-                {% endif %}
-            </li>
-        {% endfor %}
-    </ul>
+    <table class="table table-hover table-bordered">
+        <tbody>
+            {% for item in item_list %}
+                <tr>
+                    <td>
+                        <a href="{{ item.get_absolute_url }}">
+                            <h3>{{ item.name }}</h3>
+                        </a>
+                    </td>
+                    <td>가격 : {{ item.price }}</td>
+                    <td>{{ item.desc }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
-    <hr/>
-    <a href="{% url "shop:item_new" %}">New Item</a>
+    <a href="{% url "shop:item_new" %}" class="btn btn-primary">New Item</a>
 {% endblock %}
